# c3p0

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  publish.sh  publish_all.sh
c3p0/: Cargo.toml  cargo.sh
c3p0/src/: error.rs  json.rs  lib.rs  manager.rs  pool.rs  types.rs
c3p0/src/client/: mod.rs  sqlite.rs
c3p0/tests/: c3p0_test_in_memory.rs  c3p0_test_in_memory_blocking.rs  c3p0_test_mongodb.rs  c3p0_test_mysql.rs  c3p0_test_mysql_blocking.rs  c3p0_test_pg.rs  c3p0_test_pg_015.rs  c3p0_test_pg_async.rs  c3p0_test_pg_blocking.rs  c3p0_test_postgres.rs  c3p0_test_sqlite.rs  c3p0_test_sqlite_blocking.rs  c3p0_test_sqlx_mysql.rs  c3p0_test_sqlx_postgres.rs  c3p0_test_sqlx_sqlite.rs  c3p0_test_sqlx_tidb.rs  c3p0_test_tidb.rs  c3p0_test_tidb_blocking.rs  shared_mysql.rs  shared_pg.rs  shared_sqlite.rs  test_codec.rs  test_connection.rs  test_custom_repository.rs  test_json_repository.rs  test_mysql.rs  test_pg.rs  test_repository.rs  test_sqlite.rs  test_tidb.rs  test_transaction.rs
c3p0/tests/tests/: codec.rs  connection.rs  connection_TO_BE_MIGRATED.rs  json.rs  json_sql_connection.rs  json_sql_connection_TO_BE_MIGRATED.rs  transaction.rs
c3p0/tests/tests_async/: codec.rs
c3p0/tests/tests_async_json/: json_TO_BE_MIGRATED.rs  json_transaction.rs
c3p0/tests/tests_blocking/: codec.rs  connection.rs  mod.rs
c3p0/tests/tests_blocking_json/: json.rs
c3p0/tests/tests_json/: codec.rs  json.rs  json_transaction.rs  mod.rs  uuid_id.rs
c3p0/tests/tests_json_async/: json_transaction.rs  mod.rs
c3p0/tests/tests_migration/: migration.rs
c3p0/tests/utils/: codec.rs  mod.rs
c3p0_common/: Cargo.toml
c3p0_common/src/: error.rs  json.rs  lib.rs  pool.rs  sql.rs  types.rs
c3p0_common/src/blocking/: json.rs  migrate.rs  mod.rs  pool.rs
c3p0_common/src/database/: mod.rs  mongodb.rs  postgres.rs
c3p0_common/src/json/: builder.rs  codec.rs  mod.rs  model.rs  types.rs
c3p0_common/src/migrate/: md5.rs  mod.rs  sql_migration.rs
c3p0_common/src/nio/: json.rs  migrate.rs  mod.rs  pool.rs
c3p0_common/src/time/: utils.rs
c3p0_common_async/: Cargo.toml
c3p0_common_async/src/: json.rs  lib.rs  migrate.rs  pool.rs  types.rs
c3p0_common_async/src/json/: builder.rs  model.rs
c3p0_common_async/src/migrate/: migration.rs  mod.rs  sql_migration.rs
c3p0_common_async/tests/: async_closure_test.rs
c3p0_diesel/: Cargo.toml  README.md  diesel.toml  diesel_run.sh
c3p0_diesel/migrations/2019-01-30-145559_create_test_data/: down.sql
c3p0_diesel/src/: lib.rs
c3p0_diesel/tests/: diesel_c3p0_test.rs  diesel_json_test.rs  lib.rs
c3p0_diesel_macro/: Cargo.toml  README.md
c3p0_diesel_macro/src/: lib.rs
c3p0_diesel_macro/tests/: diesel_json_test.rs  reference.rs
c3p0_in_memory/: Cargo.toml
c3p0_in_memory/src/: json.rs  lib.rs  pool.rs
c3p0_in_memory/src/blocking/: json.rs  mod.rs  pool.rs
c3p0_json/: Cargo.toml  Cargo.toml_
c3p0_json/src/: json.rs  lib.rs
c3p0_json/src/client/: mod.rs  mysql.rs  pg.rs  sqlite.rs
c3p0_json/src/json/: codec.rs  model.rs
c3p0_json/tests/: shared_mysql.rs  shared_pg.rs  shared_sqlite.rs  test_codec.rs  test_connection.rs  test_json_repository.rs  test_mysql.rs  test_sqlite.rs  test_transaction.rs
c3p0_json/tests/tests/: codec.rs  connection.rs  json.rs  mod.rs  transaction.rs
c3p0_migrate/: Cargo.toml
c3p0_migrate/src/: lib.rs  md5.rs  migration.rs
c3p0_migrate/tests/: migration_test.rs  pg_repository_test.rs  shared_mysql.rs  shared_pg.rs  shared_sqlite.rs  test_mysql.rs  test_pg.rs  test_sqlite.rs
c3p0_mongodb/: Cargo.toml
c3p0_mongodb/src/: error.rs  json.rs  lib.rs  pool.rs
c3p0_mongodb/tests/: mongodb_spike_it.rs
c3p0_mysql/: Cargo.toml
c3p0_mysql/src/: common.rs  error.rs  json.rs  lib.rs  migrate.rs  pool.rs  r2d2.rs
c3p0_mysql/tests/: custom_repository_test.rs  mysql_codec_test.rs  mysql_repository_test.rs  mysql_repository_test_new.rs  shared.rs
c3p0_pg/: Cargo.toml  README.md
c3p0_pg/src/: codec.rs  common.rs  error.rs  json.rs  lib.rs  migrate.rs  pool.rs  r2d2.rs
c3p0_pg/tests/: custom_repository_test.rs  pg_codec_test.rs  pg_repository_test.rs  shared.rs  spike_tests.rs
c3p0_pg_async/: Cargo.toml
c3p0_pg_async/src/: bb8.rs  error.rs  json.rs  lib.rs  migrate.rs  pool.rs
c3p0_pg_migrate/: Cargo.toml  README.md
c3p0_pg_migrate/src/: error.rs  lib.rs  md5.rs  migration.rs  sql_migration.rs
c3p0_pg_migrate/tests/: pg_repository_test.rs  shared.rs
c3p0_pool_mysql/: Cargo.toml
c3p0_pool_mysql/src/: json.rs  lib.rs  migrate.rs
c3p0_pool_pg/: Cargo.toml
c3p0_pool_pg/src/: json.rs  lib.rs  pool.rs
c3p0_postgres/: Cargo.toml
c3p0_postgres/src/: common.rs  error.rs  json.rs  lib.rs  migrate.rs  pool.rs  query.rs
c3p0_postgres/tests/: custom_repository_test.rs  lib.rs  pg_repository_test.rs  shared.rs  spike_tests.rs
c3p0_sqlite/: Cargo.toml
c3p0_sqlite/src/: json.rs  lib.rs  migrate.rs  pool.rs
c3p0_sqlx/: Cargo.toml
c3p0_sqlx/src/: common.rs  error.rs  json.rs  lib.rs  migrate.rs  pool.rs
c3p0_surrealdb/: Cargo.toml
c3p0_surrealdb/src/: error.rs  json.rs  lib.rs  pool.rs
c3p0_surrealdb/tests/: spike_tests.rs
c3p0_tests_migrate/: Cargo.toml  cargo.sh
c3p0_tests_migrate/tests/: c3p0_migrate_test_mysql.rs  c3p0_migrate_test_mysql_blocking.rs  c3p0_migrate_test_pg.rs  c3p0_migrate_test_pg_015.rs  c3p0_migrate_test_pg_async.rs  c3p0_migrate_test_pg_blocking.rs  c3p0_migrate_test_postgres.rs  c3p0_migrate_test_sqlite.rs  c3p0_migrate_test_sqlite_blocking.rs  c3p0_migrate_test_sqlx_mysql.rs  c3p0_migrate_test_sqlx_postgres.rs  c3p0_migrate_test_sqlx_sqlite.rs  c3p0_migrate_test_sqlx_tidb.rs  c3p0_migrate_test_tidb.rs  c3p0_migrate_test_tidb_blocking.rs  test_mysql.rs  test_pg.rs  test_sqlite.rs  test_tidb.rs
examples/: Cargo.toml  postgres.rs
examples/src/: lib.rs
next/: Cargo.toml
next/src/: lib.rs  record.rs  time.rs  tx.rs
next/tests/: c3p0_test_sqlx_mysql.rs  c3p0_test_sqlx_mysql.rs_  c3p0_test_sqlx_postgres.rs  c3p0_test_sqlx_sqlite.rs  c3p0_test_sqlx_sqlite.rs_  c3p0_test_sqlx_tidb.rs  c3p0_test_sqlx_tidb.rs_
(+153 files in other folders)
