[workspace]
resolver = "2"
members = [
    "c3p0_common",
    "c3p0_postgres",
    "c3p0_sqlx",
    "c3p0",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.72.0"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]
authors = ["Francesco Cina <ufoscout@gmail.com>"]

[workspace.dependencies]
c3p0_common = { path = "./c3p0_common", version = "0.72.0" }
c3p0 = { path = "./c3p0", version = "0.72.0" }
c3p0_postgres = { path = "./c3p0_postgres", version = "0.72.0" }
c3p0_sqlx = { path = "./c3p0_sqlx", version = "0.72.0" }

rand = "0.9"
testcontainers = { package = "testcontainers-modules", version = "0.11", features = ["mysql", "postgres"] }
tokio = { version = "1" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [ "json" ] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-postgres = "0.14" 
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
maybe-once = { version = "0.17", features =["tokio"] }
thiserror = "2.0"
uuid = { version = "1", features = ["serde", "v4"] }

static_assertions = "1"

[profile.dev]
# debug = false

# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
# [profile.dev.package."*"]
# opt-level = 1

# Set the settings for build scripts and proc-macros.
# [profile.dev.build-override]
# opt-level = 2