[package]
name = "c3p0"
description = "A pleasure to meet you. I am C-3p0, JSON-DB Relations."
edition = "2024"
license = "MIT"
version = "0.80.8"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]
authors = ["Francesco Cina <ufoscout@gmail.com>"]
readme = "./README.md"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0-alpha.1", default-features = false, features = [ "json", "macros" ] }
thiserror = "2.0"

[dev-dependencies]
const_format = "0.2.35"
const-random = "0.1"
maybe-once = { version = "0.17", features =["tokio"] }
static_assertions = "1"
testcontainers = { package = "testcontainers-modules", version = "0.15", features = ["mysql", "postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["sqlx/runtime-tokio"]
migrate = ["sqlx/macros", "sqlx/migrate"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]