[package]
name = "c3p0"
license = "MIT"
version = "0.66.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2. Based on rust-postgres."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.66.0" }

#in_memory feature
c3p0_in_memory = { path = "../c3p0_in_memory", version = "0.66.0", optional = true }

# mysql feature
#c3p0_mysql = { path = "../c3p0_mysql", version = "0.66.0", optional = true }

# postgres feature
c3p0_postgres = { path = "../c3p0_postgres", version = "0.66.0", optional = true }

# sqlx feature
c3p0_sqlx = { path = "../c3p0_sqlx", version = "0.66.0", optional = true }

[dev-dependencies]
maybe-single = { version = "0.15.0", features =["async"] }
once_cell = "1.5.0"
rand = "0.8"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
testcontainers = "0.12"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }


[features]
default = []
in_memory = ["c3p0_in_memory"]
migrate = ["c3p0_postgres?/migrate", "c3p0_sqlx?/migrate"]
#mysql = ["c3p0_mysql"]
postgres = ["c3p0_postgres"]
sqlx_mysql = ["c3p0_sqlx/mysql"]
sqlx_postgres = ["c3p0_sqlx/postgres"]
sqlx_sqlite = ["c3p0_sqlx/sqlite"]
#tidb = ["c3p0_mysql"]
