[package]
name = "c3p0"
description = "A good friend for r2d2."
readme = "README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
c3p0_common = { workspace = true }

#in_memory feature
c3p0_in_memory = { workspace = true, optional = true }

# postgres feature
c3p0_postgres = { workspace = true, optional = true }

# sqlx feature
c3p0_sqlx = { workspace = true, optional = true }

[dev-dependencies]
maybe-single = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }


[features]
default = []
in_memory = ["c3p0_in_memory"]
postgres = ["c3p0_postgres"]
sqlx_mysql = ["c3p0_sqlx/mysql"]
sqlx_postgres = ["c3p0_sqlx/postgres"]
sqlx_sqlite = ["c3p0_sqlx/sqlite"]

