[package]
name = "c3p0"
description = "A good friend for r2d2."
readme = "../README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[package.metadata.docs.rs]
# Generate docs for all features
all-features = true

[dependencies]
include-utils = { workspace = true }
c3p0_common = { workspace = true }

# postgres feature
c3p0_postgres = { workspace = true, optional = true }

# sqlx feature
c3p0_sqlx = { workspace = true, optional = true }

[dev-dependencies]
maybe-once = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { workspace = true }

[features]
default = []
migrate = ["c3p0_postgres?/migrate", "c3p0_sqlx?/migrate"]
postgres = ["c3p0_postgres"]
sqlx = ["c3p0_sqlx"]
sqlx_mysql = ["sqlx", "c3p0_sqlx/mysql"]
sqlx_postgres = ["sqlx", "c3p0_sqlx/postgres"]
sqlx_sqlite = ["sqlx", "c3p0_sqlx/sqlite"]
