[package]
name = "c3p0_common"
description = "A good friend for r2d2"
readme = "../README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true


[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# mongodb = { workspace = true, optional = true }
# tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []
# mongodb = ["dep:mongodb"]
# postgres = ["dep:tokio-postgres"]
# sqlx_mysql = ["c3p0_sqlx/mysql"]
# sqlx_postgres = ["c3p0_sqlx/postgres"]
# sqlx_sqlite = ["c3p0_sqlx/sqlite"]