[package]
name = "c3p0_common_async"
license = "MIT"
version = "0.43.2"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["c3p0", "async"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.43.2" }
log = "0.4"

async-trait = { version = "0.1", optional = true }


[features]
default = []

migrate = ["c3p0_common/migrate"]