[package]
name = "c3p0_diesel"
license = "MIT"
version = "0.2.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2. Based on diesel."
edition = "2018"

[dependencies]
diesel = { version = "1.0" }
log = "0.4"
c3p0 = { path = "../c3p0", version = "0.2.0" }
c3p0_diesel_macro = { path = "../c3p0_diesel_macro", version = "0.2.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
diesel_migrations = "1.0"
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
testcontainers = "0.5"
