[package]
name = "c3p0_diesel_macro"
license = "MIT"
version = "0.2.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "Macros for c3p0_diesel"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
c3p0 = { path = "../c3p0", version = "0.2.0" }
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
quote = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
syn = "0.14"
