[package]
name = "c3p0_diesel_macro"
license = "MIT"
version = "0.5.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "Macros for c3p0_diesel"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg", "json", "diesel"]

[lib]
proc-macro = true

[dependencies]
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
proc-macro2 = "0.4"
quote = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
syn = "0.14"

[dev-dependencies]
diesel_migrations = "1.0"
testcontainers = "0.6"