[package]
name = "c3p0_in_memory"
license = "MIT"
version = "0.45.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = []

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.45.0" }
serde = "1.0"
serde_json = "1.0"

# feature 'blocking'
guardian = { version = "1", optional = true}

[dev-dependencies]
serde_derive = "1.0"

[features]
default = []

blocking = ["c3p0_common/blocking", "guardian"]