[package]
name = "c3p0_in_memory"
license = "MIT"
version = "0.63.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = []

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.63.0" }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1", features = ["sync"]}

[dev-dependencies]
serde_derive = "1.0"
tokio = {version = "1", features = ["macros", "rt"]}

[features]
default = []

