[package]
name = "c3p0_json"
license = "MIT"
version = "0.5.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.5.1" }
err-derive = "0.1"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# mysql feature
c3p0_mysql = { path = "../c3p0_mysql", version = "0.5.1", optional = true }
mysql_client = { package = "mysql",  version = "16", optional = true }
r2d2_mysql = { version = "16.0", optional = true }

# pg feature
c3p0_pg = { path = "../c3p0_pg", version = "0.5.1", optional = true }
postgres = { version = "0.15", features = ["with-serde_json"], optional = true  }
r2d2_postgres = { version = "0.14", optional = true }

# sqlite feature
c3p0_sqlite = { path = "../c3p0_sqlite", version = "0.5.1", optional = true }
rusqlite = { version = "0.17", features = ["bundled", "serde_json", "functions"], optional = true  }
r2d2_sqlite = { version = "0.9", optional = true }

[dev-dependencies]
lazy_static = "1.3"
maybe-single = "0.1"
testcontainers = "0.6"

[features]
default = ["mysql"]

mysql = ["c3p0_mysql", "mysql_client", "r2d2_mysql"]
pg = ["c3p0_pg", "postgres", "r2d2_postgres"]
sqlite = ["c3p0_sqlite", "rusqlite", "r2d2_sqlite"]
