[package]
name = "c3p0_json"
license = "MIT"
version = "0.6.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.6.0" }
err-derive = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# mysql feature
c3p0_mysql = { path = "../c3p0_mysql", version = "0.6.0", optional = true }

# pg feature
c3p0_pg = { path = "../c3p0_pg", version = "0.6.0", optional = true }

# sqlite feature
c3p0_sqlite = { path = "../c3p0_sqlite", version = "0.6.0", optional = true }


[dev-dependencies]
lazy_static = "1.3"
maybe-single = "0.3"
#maybe-single = { path = "../../maybe-single", version = "0.2.0" }
testcontainers = "0.6"
rand = "0.7"

[features]
default = []

mysql = ["c3p0_mysql"]
pg = ["c3p0_pg"]
sqlite = ["c3p0_sqlite"]
