[package]
name = "c3p0_migrate"
license = "MIT"
version = "0.8.2"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2. Based on rust-postgres."
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]

[dependencies]
c3p0_json = { path = "../c3p0_json", version = "0.8.2" }
include_dir="0.2"
log = "0.4"
md-5 = "0.8"
same-file = "1"
serde = "1.0"
serde_derive = "1.0"
walkdir = "2.2"

[dev-dependencies]
lazy_static = "1.3"
maybe-single = "0.4"
testcontainers = "0.6"
rand = "0.7"

[features]
default = []

mysql = ["c3p0_json/mysql"]
pg = ["c3p0_json/pg"]
sqlite = ["c3p0_json/sqlite"]