[package]
name = "c3p0_mongodb"
description = "A good friend for r2d2"
readme = "../README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true


[dependencies]
async-trait = { workspace = true }
c3p0_common = { workspace = true }

bson = { workspace = true }
future-utils = { version = "0.12" }
log = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }

# TODO: remove this once
rand = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }


[features]
default = []

spike_tests = []
