[package]
name = "c3p0_mysql"
license = "MIT"
version = "0.62.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.62.1" }
async-trait = "0.1"
log = "0.4"
mysql_async = "0.27.0"
serde = "1.0"
time = "0.2"
tokio = { version = "1.0", features = ["rt"] }

[features]
default = []

migrate = ["c3p0_common/migrate"]