[package]
name = "c3p0_pg"
license = "MIT"
version = "0.50.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.50.1" }
log = "0.4"
serde = "1.0"

# Required by both 'async' and 'blocking'
tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }

# feature 'async'
async-trait = { version = "0.1", optional = true}
deadpool = { version = "0.5", optional = true}
deadpool-postgres = { version = "0.5", optional = true}
futures = { version = "0.3.1", optional = true}

# feature 'blocking'
postgres = { version = "0.17", features = ["with-serde_json-1"], optional = true}
r2d2 = { version = "0.8.8", optional = true}

[features]
default = []

async = ["c3p0_common/async", "async-trait", "deadpool", "deadpool-postgres", "futures"]
blocking = ["c3p0_common/blocking", "postgres", "r2d2"]
migrate = ["c3p0_common/migrate"]