[package]
name = "c3p0_pg_async"
license = "MIT"
version = "0.42.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.42.1", features = ["async"] }
async-trait = "0.1"
futures = "0.3.1"
log = "0.4"
bb8 = "0.4"
bb8-postgres = "0.4"

# required by custom bb8 connection manager
# tokio = { version = "0.2", features = ["rt-core"] }

tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
serde = "1.0"

[features]
default = []

