[package]
name = "c3p0_pg_async"
license = "MIT"
version = "0.45.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.45.0" }
async-trait = "0.1"
deadpool = "0.5"
deadpool-postgres = "0.5"
futures = "0.3.1"
log = "0.4"

tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
serde = "1.0"

[features]
default = []

migrate = ["c3p0_common/migrate"]

