[package]
name = "c3p0_pg_migrate"
license = "MIT"
version = "0.2.3"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2. Based on rust-postgres."
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg", "json"]

[dependencies]
c3p0 = { path = "../c3p0", version = "0.2.3", features = ["pg"] }
err-derive = "0.1"
log = "0.4"
md-5 = "0.8"
postgres = "0.15"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
lazy_static = "1.3"
r2d2_postgres = "0.14"
testcontainers = "0.6"
