[package]
name = "c3p0_pool_mysql"
license = "MIT"
version = "0.8.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.8.1" }
log = "0.4"
mysql_client = { package = "mysql",  version = "16"}
r2d2 = "0.8"
r2d2_mysql = "16.0"
rental = "0.5"

