[package]
name = "c3p0_pool_pg"
license = "MIT"
version = "0.8.2"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.8.2" }
log = "0.4"
r2d2 = "0.8"
postgres = { version = "0.15", features = ["with-serde_json"] }
r2d2_postgres = "0.14"

