[package]
name = "c3p0_postgres"
license = "MIT"
version = "0.67.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["postgres", "pg"]

[dependencies]
async-trait = "0.1"
c3p0_common = { path = "../c3p0_common", version = "0.67.0" }

deadpool = { version = "0.9", features = ["rt_tokio_1"] }
deadpool-postgres = "0.10" 
log = "0.4"
serde = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
testcontainers = "0.12"
tokio = { version = "1", features = ["macros"] }


[features]
default = []
migrate = ["c3p0_common/migrate"]

spike_tests = []
