[package]
name = "c3p0_sqlite"
license = "MIT"
version = "0.27.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["sqlite"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.27.0" }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.12"
rental = "0.5"
rusqlite = { version = "0.20", features = ["bundled", "serde_json", "functions"]  }
serde = "1.0"

[features]
default = []

migrate = ["c3p0_common/migrate"]