[package]
name = "c3p0_sqlite"
license = "MIT"
version = "0.52.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["sqlite"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.52.0" }
log = "0.4"
serde = "1.0"

# feature 'blocking'
rusqlite = { version = "0.22", features = ["bundled", "serde_json", "functions"], optional = true }
r2d2 = { version = "0.8.8", optional = true}
r2d2_sqlite = { version = "0.15", optional = true}

[features]
default = []

blocking = ["c3p0_common/blocking", "rusqlite", "r2d2", "r2d2_sqlite"]
migrate = ["c3p0_common/migrate"]