[package]
name = "c3p0_sqlx"
license = "MIT"
version = "0.53.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2"
edition = "2018"
readme = "../README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["sqlx", "postgres", "pg", "mysql", "sqlite", "async"]

[dependencies]
c3p0_common = { path = "../c3p0_common", version = "0.53.0" }
async-trait = "0.1"
futures = "0.3.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "json", "runtime-tokio" ] }


[features]
default = ["postgres"]
migrate = ["c3p0_common/migrate"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]