[package]
name = "c3p0_sqlx"
description = "A good friend for r2d2"
readme = "../README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true


[dependencies]
c3p0_common = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }

[features]
default = ["sqlx/runtime-tokio-rustls"]
migrate = ["c3p0_common/migrate"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]