[package]
name = "c3p0_tests_migrate"
license = "MIT"
version = "0.63.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A good friend for r2d2. Based on rust-postgres."
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ufoscout/c3p0"
repository = "https://github.com/ufoscout/c3p0"
keywords = ["mysql", "postgres", "pg", "sqlite", "json"]

[dependencies]
c3p0 = { path = "../c3p0", version = "0.63.1" }

[dev-dependencies]
rand = "0.8"
testcontainers = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []

#mysql = ["c3p0/mysql_migrate"]
postgres = ["c3p0/postgres_migrate"]
sqlx_mysql = ["c3p0/sqlx_mysql_migrate"]
sqlx_postgres = ["c3p0/sqlx_postgres_migrate"]
#tidb = ["c3p0/tidb_migrate"]