[package]
name = "c3p0_tests_migrate"
description = "A good friend for r2d2. Based on rust-postgres."
readme = "README.md"

license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true


[dependencies]
c3p0 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []

postgres = ["c3p0/postgres", "c3p0/migrate"]
sqlx_mysql = ["c3p0/sqlx_mysql", "c3p0/migrate"]
sqlx_postgres = ["c3p0/sqlx_postgres", "c3p0/migrate"]
sqlx_sqlite = ["c3p0/sqlx_sqlite", "c3p0/migrate"]
